# rust-learn

./: .gitignore  Cargo.toml  README.md
Result/src/: main.rs
Traits/src/: main.rs
basic-patter-matching/: Cargo.toml
basic-patter-matching/src/: main.rs
borrowing/src/: main.rs
closures/src/: main.rs
control-flujo/: Cargo.toml
control-flujo/src/: main.rs
dyn-traits/: Cargo.toml
dyn-traits/src/: main.rs
enums/src/: main.rs
funciones/src/: main.rs
generics/src/: main.rs
hashmaps/src/: main.rs
implementation-funciones-asociadas/: Cargo.toml
implementation-funciones-asociadas/src/: main.rs
iterators/src/: main.rs
libexample/: Cargo.toml
libexample-usage/: Cargo.toml
libexample-usage/src/: main.rs
libexample/src/: lib.rs
modules/: Cargo.toml
modules/src/: main.rs
operador-propagacion/: Cargo.toml
operador-propagacion/src/: main.rs
options/src/: main.rs
ownership/src/: main.rs
pattern-matching-avanzado/: Cargo.toml
pattern-matching-avanzado/src/: main.rs
slices/src/: main.rs
structs/src/: main.rs
text/: Cargo.toml
text/src/: main.rs
tipos-primitivos/: Cargo.toml
tipos-primitivos/src/: main.rs
variables-mutabilidad/: Cargo.toml
variables-mutabilidad/src/: main.rs
variables/src/: main.rs
vecs/src/: main.rs
