[workspace]
resolver="3"
members = ["Result","basic-patter-matching","borrowing","control-flujo", "enums","funciones", "hashmaps","hello-world", "implementation-funciones-asociadas", "options", "ownership", "pattern-matching-avanzado", "slices", "structs", "text", "tipos-primitivos", "variables", "variables-mutabilidad", "vecs"]
