[workspace]
resolver="3"
members = ["Result", "Traits","basic-patter-matching","borrowing","control-flujo", "dyn-traits", "enums","funciones", "generics", "hashmaps","hello-world", "implementation-funciones-asociadas", "operador-propagacion", "options", "ownership", "pattern-matching-avanzado", "slices", "structs", "text", "tipos-primitivos", "variables", "variables-mutabilidad", "vecs"]
